--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
